# object-detection

./: .gitignore  README.md  compile.sh  install_dependencies.sh
resources/: classes.txt  dangerous.dae  fire-extinguisher.dae  generate.py  infectious-substance.dae  radioactive.dae  settings.rviz
resources/meshes/: corrosive.dae  explosive.dae  fire-extinguisher.dae  flammable-solid.dae  flammable.dae  inhalation-hazard.dae  non-flammable-gas.dae  organic-peroxide.dae  oxygen.dae  poison.dae  spontaneously-combustible.dae
src/env-hooks/: setupvars.bash
src/object_detection/: CMakeLists.txt  GetOpenCV.cmake  GetOpenCV.txt  GetZbar.cmake  package.xml
src/object_detection/launch/: detect_objects.launch
src/object_detection/src/: QR.cpp  QR.hpp  cluster.cpp  detect2d.cpp  detect3d.cpp  object.cpp  object.hpp  odom_to_path  odometry_tf  tracker.cpp  tracker.hpp  util.cpp  util.hpp  yolo.cpp  yolo.hpp
src/robocup-object-detection-master/: .gitignore
src/robocup-object-detection-master/object_detection/msg/: detection.msg  detection_arr.msg
src/robocup-object-detection-master/object_detection/src/common/: util.h  vec3d.h  yolo.cpp
src/robocup-object-detection-master/object_detection/src/depth_calibration/: CMakeLists.txt  collect_raw_data.cpp  depth-calibration.md
src/robocup-object-detection-master/object_detection/src/object_detection/: detect2d.cpp  detect3d.cpp  print_csv.cpp  simulate-realsense.sh  with-realsense.sh
src/robocup-object-detection/object_detection/: .gitignore  CMakeLists.txt  package.xml
src/robocup-object-detection/object_detection/launch/: detect_objects.launch
src/robocup-object-detection/object_detection/src/common/: util.cpp  yolo.h
src/robocup-object-detection/object_detection/src/depth_calibration/: calibration.ipynb
src/robocup-object-detection/object_detection/src/object_detection/: cluster.cpp  detect2d.sh  detect3d.sh  test-detection.sh  with-realsense.sh
