<?xml version="1.0"?>
<package format="2">
  <name>object_detection</name>
  <version>0.0.0</version>
  <description>The Machine Learning Package</description>

  <maintainer email="ea520@cam.ac.uk">elorm</maintainer>

  <license>MIT</license>



    <build_depend>message_generation</build_depend>
    <depend>roslib</depend>
    <depend>std_msgs</depend>
    <depend>message_filters</depend>
    <depend>cv_bridge</depend>
    <depend>image_transport</depend>
    <depend>rviz</depend>
    <depend>roslaunch</depend>
    <depend>roscpp</depend>
    <depend>realsense2_camera</depend>
    <depend>libmlpack-dev</depend>
    <depend>zbar</depend>
    <depend>libusb-1.0-dev</depend>
    <depend>libdbus-dev</depend>
    <depend>python3-numpy</depend>


    <exec_depend>message_runtime</exec_depend>

    <buildtool_depend>catkin</buildtool_depend>


  <export>

  </export>
</package>
